--- a/Matchismo/en.lproj/MainStoryboard.storyboard
+++ b/Matchismo/en.lproj/MainStoryboard.storyboard
@@ -123,7 +123,7 @@
             <objects>
                 <viewController id="P6a-GY-DKP" customClass="SetCardGameViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="viD-aT-aYt">
-                        <rect key="frame" x="0.0" y="20" width="320" height="411"/>
+                        <rect key="frame" x="0.0" y="20" width="480" height="251"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Score: 0" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Nbq-qM-mca">
@@ -134,14 +134,14 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Last Action" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="bFo-rM-nAr">
-                                <rect key="frame" x="25" y="308" width="200" height="44"/>
+                                <rect key="frame" x="20" y="317" width="128" height="23"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="uJs-N0-laV">
-                                <rect key="frame" x="132" y="348" width="56" height="44"/>
+                                <rect key="frame" x="169" y="348" width="56" height="44"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="Deal">
@@ -156,7 +156,7 @@
                                 </connections>
                             </button>
                             <collectionView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="prototypes" id="Twf-Kb-KZI">
-                                <rect key="frame" x="0.0" y="0.0" width="329" height="315"/>
+                                <rect key="frame" x="0.0" y="0.0" width="489" height="155"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" red="0.052062960659999998" green="0.62877887229999996" blue="0.19581195809999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <gestureRecognizers/>
@@ -207,15 +207,23 @@
                                     <action selector="drawCards:" destination="P6a-GY-DKP" eventType="touchUpInside" id="2K7-7R-CLR"/>
                                 </connections>
                             </button>
+                            <view opaque="NO" contentMode="scaleToFill" id="7Fm-Oc-kX3">
+                                <rect key="frame" x="20" y="350" width="120" height="40"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="0.5042459239" green="0.4949764783883826" blue="0.45777150045797355" alpha="1" colorSpace="calibratedRGB"/>
+                        <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Set" image="setcards.png" id="JiL-kG-roz"/>
+                    <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
                     <connections>
                         <outlet property="cardCollectionView" destination="Twf-Kb-KZI" id="Cd3-NM-v5L"/>
                         <outlet property="drawButton" destination="lzk-U6-Sqm" id="eTD-q7-Tld"/>
                         <outlet property="lastActionLabel" destination="bFo-rM-nAr" id="lFO-35-ukp"/>
                         <outlet property="scoreLabel" destination="Nbq-qM-mca" id="xh8-Xc-BrK"/>
+                        <outlet property="selectionView" destination="7Fm-Oc-kX3" id="okC-xB-eqn"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AFd-oq-3RP" sceneMemberID="firstResponder"/>
@@ -347,6 +355,7 @@
                 <relationship kind="outlet" name="cardCollectionView" candidateClass="UICollectionView"/>
                 <relationship kind="outlet" name="drawButton" candidateClass="UIButton"/>
                 <relationship kind="outlet" name="lastActionLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="selectionView" candidateClass="UIView"/>
             </relationships>
         </class>
         <class className="SetCardView" superclassName="UIView">
